tests/should_fail/syntax_mixed_list_types.nv
module main

// SHOULD FAIL: mixed types in list literal — all elements must be same type
let xs = [1, 2, "three", 4]
println(xs)
